--- a/pursuit/Views/HomeJobSeeker.storyboard
+++ b/pursuit/Views/HomeJobSeeker.storyboard
@@ -11,14 +11,14 @@
         <!--Navigation Controller-->
         <scene sceneID="7ig-vR-FWl">
             <objects>
-                <navigationController id="qdD-V1-JsQ" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="HomeJobS" useStoryboardIdentifierAsRestorationIdentifier="YES" id="qdD-V1-JsQ" sceneMemberID="viewController">
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="DPa-sq-bXk">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="wfW-Eo-KL1"/>
+                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="Tob-Ki-pct"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Am-Cl-uhR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -28,33 +28,91 @@
         <!--Home-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="HomeJobS" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController id="Y6W-OH-hqX" customClass="HomeJobSeekerViewController" customModule="pursuit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JIk-wp-9mQ">
-                                <rect key="frame" x="16" y="103" width="361" height="1193"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NeL-Cy-q9k">
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="hasan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNd-Mw-fzV">
-                                        <rect key="frame" x="159" y="405" width="46" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BmZ-tB-g9p">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="1500"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="flU-aB-DD4">
+                                                <rect key="frame" x="10" y="0.0" width="60" height="61"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ddT-eu-O44">
+                                                        <rect key="frame" x="0.0" y="0.0" width="60" height="61"/>
+                                                    </imageView>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.2470588235" green="0.13725490200000001" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="60" id="hNO-MM-gMC"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="quB-eS-gb7"/>
+                                                </constraints>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="pwc-Vb-TW3">
+                                                <rect key="frame" x="78" y="0.0" width="219" height="61"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Hello," lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELe-2e-Dij">
+                                                        <rect key="frame" x="0.0" y="0.0" width="219" height="31"/>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Vv-ks-ffq">
+                                                        <rect key="frame" x="0.0" y="31" width="219" height="30"/>
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="Mx6-uO-OCw"/>
+                                                </constraints>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="pwc-Vb-TW3" firstAttribute="leading" secondItem="flU-aB-DD4" secondAttribute="trailing" constant="8" symbolic="YES" id="2B0-Fj-Jyx"/>
+                                            <constraint firstAttribute="bottom" secondItem="pwc-Vb-TW3" secondAttribute="bottom" constant="1439" id="EEU-yC-Zye"/>
+                                            <constraint firstItem="flU-aB-DD4" firstAttribute="top" secondItem="BmZ-tB-g9p" secondAttribute="top" id="NBa-qf-W6y"/>
+                                            <constraint firstAttribute="height" constant="1500" id="P8W-eG-08i"/>
+                                            <constraint firstAttribute="trailing" secondItem="pwc-Vb-TW3" secondAttribute="trailing" constant="96" id="T0O-T1-hfU"/>
+                                            <constraint firstItem="flU-aB-DD4" firstAttribute="leading" secondItem="BmZ-tB-g9p" secondAttribute="leading" constant="10" id="gDR-xy-pfS"/>
+                                            <constraint firstAttribute="bottom" secondItem="flU-aB-DD4" secondAttribute="bottom" constant="1439" id="i2r-ZF-qJf"/>
+                                            <constraint firstAttribute="trailing" secondItem="flU-aB-DD4" secondAttribute="trailing" constant="323" id="kFm-f2-tVd"/>
+                                            <constraint firstItem="pwc-Vb-TW3" firstAttribute="top" secondItem="flU-aB-DD4" secondAttribute="bottom" constant="-61" id="r4o-Qz-5iS"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                                <viewLayoutGuide key="contentLayoutGuide" id="KFn-UV-wH1"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="8Ti-ZD-jhw"/>
+                                <constraints>
+                                    <constraint firstItem="BmZ-tB-g9p" firstAttribute="leading" secondItem="NeL-Cy-q9k" secondAttribute="leading" id="eWu-O7-4gl"/>
+                                    <constraint firstItem="BmZ-tB-g9p" firstAttribute="top" secondItem="NeL-Cy-q9k" secondAttribute="top" id="kvR-qu-1wk"/>
+                                    <constraint firstAttribute="trailing" secondItem="BmZ-tB-g9p" secondAttribute="trailing" id="v4l-sr-vWI"/>
+                                    <constraint firstAttribute="bottom" secondItem="BmZ-tB-g9p" secondAttribute="bottom" id="zGw-wW-wDU"/>
+                                </constraints>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NeL-Cy-q9k" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="1wh-qW-vLy"/>
+                            <constraint firstAttribute="trailing" secondItem="NeL-Cy-q9k" secondAttribute="trailing" id="J28-ij-DyQ"/>
+                            <constraint firstItem="BmZ-tB-g9p" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="1.76056" id="YXz-Fs-jOo"/>
+                            <constraint firstItem="NeL-Cy-q9k" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="bks-li-JSN"/>
+                            <constraint firstItem="NeL-Cy-q9k" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="o30-5u-L2l"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" tag="3" title="Home" image="house" catalog="system" id="P8W-Cc-piN"/>
-                    <navigationItem key="navigationItem" id="Iph-qd-zj3"/>
+                    <navigationItem key="navigationItem" title="Home" id="Iph-qd-zj3"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <size key="freeformSize" width="393" height="852"/>
+                    <connections>
+                        <outlet property="displayFirstNamelbl" destination="0Vv-ks-ffq" id="103-JX-Cf3"/>
+                        <outlet property="homeIconImg" destination="ddT-eu-O44" id="Ir7-Ws-gvU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
