Recreated Job Details page to comply to IPad and Iphone both

--- a/pursuit/Views/JobSeeker Views/JobsJobSeeker.storyboard
+++ b/pursuit/Views/JobSeeker Views/JobsJobSeeker.storyboard
@@ -62,7 +62,7 @@
                                                                 <state key="normal" title="Button"/>
                                                                 <buttonConfiguration key="configuration" style="gray" title="Filter" cornerStyle="medium"/>
                                                                 <connections>
-                                                                    <segue destination="YDL-xu-Rqr" kind="push" id="49e-xo-oNr"/>
+                                                                    <segue destination="YDL-xu-Rqr" kind="show" id="49e-xo-oNr"/>
                                                                 </connections>
                                                             </button>
                                                             <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HDW-uN-B8c">
@@ -289,7 +289,7 @@
                                                 <buttonConfiguration key="configuration" style="gray" title="Assistant" cornerStyle="capsule"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MK9-R9-2YG">
-                                                <rect key="frame" x="13" y="79.333333333333329" width="108" height="34"/>
+                                                <rect key="frame" x="18" y="79.333333333333329" width="108" height="34"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
@@ -376,7 +376,7 @@
                                                 <buttonConfiguration key="configuration" style="gray" title="Southern" cornerStyle="capsule"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4te-ju-FiR">
-                                                <rect key="frame" x="21" y="81" width="97.666666666666657" height="34"/>
+                                                <rect key="frame" x="18" y="81" width="97.666666666666657" height="34"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
@@ -436,7 +436,7 @@
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xRv-Uu-IWL">
                                         <rect key="frame" x="0.0" y="558.66666666666663" width="393" height="107.33333333333337"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0F8-g8-X8B">
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="13" id="0F8-g8-X8B">
                                             <size key="itemSize" width="100" height="40"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
